permitir apagar certificados direito da pagina, caso seja administrador
Signed-off-by: Neg <negramones@gmail.com>

--- a/home/templates/home/certificados/certificados.html
+++ b/home/templates/home/certificados/certificados.html
@@ -3,7 +3,7 @@
         <tr>
             <th>Nome</th>
             <th>Emitido Para</th>
-            <th>Número de Série</th>  <!-- Nova coluna -->
+            <th>Número de Série</th>
             <th>Validade</th>
             <th>Ações</th>
         </tr>
@@ -13,11 +13,19 @@
         <tr>
             <td>{{ certificado.nome }}</td>
             <td>{{ certificado.emitido_para }}</td>
-            <td>{{ certificado.numero_serie }}</td>  <!-- Novo campo -->
+            <td>{{ certificado.numero_serie }}</td>
             <td>{{ certificado.validade_fim }}</td>
             <td>
                 <a href="{% url 'detalhes_certificado' certificado.id %}">Ver Detalhes</a>
                 <a href="{% url 'download_certificado' certificado.pk %}" class="btn btn-primary">Baixar</a>
+
+                {% if user.is_staff %}
+                <!-- Botão para apagar certificado -->
+                <form method="POST" action="{% url 'apagar_certificado' certificado.pk %}" style="display:inline;">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger">Apagar</button>
+                </form>
+                {% endif %}
             </td>
         </tr>
         {% endfor %}
