--- a/home/templates/home/header.html
+++ b/home/templates/home/header.html
@@ -4,86 +4,118 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decodificador de CSR</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'home/css/styles.css' %}">
+    <style>
+        .container {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .form-container, .result-container {
+            flex: 1;
+            margin: 10px;
+        }
+
+        .form-container {
+            margin-right: 20px; /* Espaço entre as divs */
+        }
+    </style>
 </head>
 <body>
+    <header class="header">
+        <div class="header-container">
+            <h1>Bem-vindo à página Apps!</h1>
+            <div class="user-info">
+                <p>Você está logado como <strong>{{ user.username }}</strong>.</p>
+                <form action="{% url 'logout' %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="logout-btn">Logout</button>
+                </form>
+            </div>
+        </div>
+    </header>
     <h1>Visualizador de Header</h1>
 
-    <!-- Formulário de upload de arquivo binário e certificados -->
-    <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <label for="binary_file">Envie o arquivo binário:</label>
-        <input type="file" name="binary_file" accept="*/*" required><br><br>
+    <div class="container">
+        <!-- Formulário de upload de arquivo binário e certificados -->
+        <div class="form-container">
+            <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                <label for="binary_file">Envie o arquivo binário:</label>
+                <input type="file" name="binary_file" accept="*/*" required><br><br>
 
-        <label for="cert_origin">Envie o certificado de origem (opcional):</label>
-        <input type="file" name="cert_origin" accept=".pem, .der, .cer"><br><br>
+                <label for="cert_origin">Envie o certificado de origem (opcional):</label>
+                <input type="file" name="cert_origin" accept=".pem, .der, .cer"><br><br>
 
-        <label for="cert_destination">Envie o certificado de destino (opcional):</label>
-        <input type="file" name="cert_destination" accept=".pem, .der, .cer"><br><br>
+                <label for="cert_destination">Envie o certificado de destino (opcional):</label>
+                <input type="file" name="cert_destination" accept=".pem, .der, .cer"><br><br>
 
-        <button type="submit">Enviar</button>
-    </form>
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
 
-    {% if error %}
-        <p style="color: red;">{{ error }}</p>
-    {% endif %}
-
-    {% if parsed_data %}
-        <h2>Informações do Cabeçalho Decodificado:</h2>
-        <ul>
-            {% for field, value in parsed_data.items %}
-                <li><strong>{{ field }}:</strong> {{ value }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
-
-    {% if cert_verification %}
-        <h2>Resultado da Comparação dos Certificados</h2>
-        <ul>
-            <li><strong>Certificado de Origem do Arquivo:</strong>
-                {% if cert_verification.certificado_origem %}
-                    ✅
-                {% else %}
-                    ❌
-                {% endif %}
-            </li>
-
-            <li><strong>Certificado de Destino do Arquivo:</strong>
-                {% if cert_verification.certificado_destino %}
-                    ✅
-                {% else %}
-                    ❌
-                {% endif %}
-            </li>
-
-            <li><strong>Emissor de Origem:</strong> {{ cert_verification.emissor_origem }}</li>
-            <li><strong>Emissor de Destino:</strong> {{ cert_verification.emissor_destino }}</li>
-            <li><strong>Série do Certificado de Origem:</strong> {{ cert_verification.serie_origem }}</li>
-            <li><strong>Série do Certificado de Destino:</strong> {{ cert_verification.serie_destino }}</li>
-        </ul>
-    {% endif %}
-    {% if certificados_encontrados.origem or certificados_encontrados.destino %}
-        <h2>Certificados Encontrados no Banco de Dados</h2>
-        <ul>
-
-            {% if certificados_encontrados.origem %}
-                <li>
-                    <strong>Certificado de Origem:</strong> {{ certificados_encontrados.origem.nome }}
-                    (<a href="{% url 'download_certificado' certificados_encontrados.origem.id %}" download>📥 Baixar Certificado de Origem</a>)
-                </li>
-            {% endif %}
-            {% if certificados_encontrados.destino %}
-                <li>
-                    <strong>Certificado de Destino:</strong> {{ certificados_encontrados.destino.nome }}
-                    (<a href="{% url 'download_certificado' certificados_encontrados.destino.id %}" download>📥 Baixar Certificado de Destino</a>)
-                </li>
+        <!-- Resultado -->
+        <div class="result-container">
+            {% if error %}
+                <p class="error-message">{{ error }}</p>
             {% endif %}
 
+            {% if parsed_data %}
+                <h2>Informações do Cabeçalho Decodificado:</h2>
+                <ul>
+                    {% for field, value in parsed_data.items %}
+                        <li><strong>{{ field }}:</strong> {{ value }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
 
+            {% if cert_verification %}
+                <h2>Resultado da Comparação dos Certificados</h2>
+                <ul>
+                    <li><strong>Certificado de Origem do Arquivo:</strong>
+                        {% if cert_verification.certificado_origem %}
+                            ✅
+                        {% else %}
+                            ❌
+                        {% endif %}
+                    </li>
 
+                    <li><strong>Certificado de Destino do Arquivo:</strong>
+                        {% if cert_verification.certificado_destino %}
+                            ✅
+                        {% else %}
+                            ❌
+                        {% endif %}
+                    </li>
 
-        </ul>
-    {% endif %}
+                    <li><strong>Emissor de Origem:</strong> {{ cert_verification.emissor_origem }}</li>
+                    <li><strong>Emissor de Destino:</strong> {{ cert_verification.emissor_destino }}</li>
+                    <li><strong>Série do Certificado de Origem:</strong> {{ cert_verification.serie_origem }}</li>
+                    <li><strong>Série do Certificado de Destino:</strong> {{ cert_verification.serie_destino }}</li>
+                </ul>
+            {% endif %}
 
+            {% if certificados_encontrados.origem or certificados_encontrados.destino %}
+                <h2>Certificados Encontrados no Banco de Dados</h2>
+                <ul>
+                    {% if certificados_encontrados.origem %}
+                        <li>
+                            <strong>Certificado de Origem:</strong> {{ certificados_encontrados.origem.nome }}
+                            (<a href="{% url 'download_certificado' certificados_encontrados.origem.id %}" download>📥 Baixar Certificado de Origem</a>)
+                        </li>
+                    {% endif %}
+                    {% if certificados_encontrados.destino %}
+                        <li>
+                            <strong>Certificado de Destino:</strong> {{ certificados_encontrados.destino.nome }}
+                            (<a href="{% url 'download_certificado' certificados_encontrados.destino.id %}" download>📥 Baixar Certificado de Destino</a>)
+                        </li>
+                    {% endif %}
+                </ul>
+            {% endif %}
+        </div>
+    </div>
 
+    <a href="javascript:history.back()" class="back-button">Voltar</a>
 </body>
 </html>
